--- a/wp-content/themes/nok-2025-v1/assets/css/components/_nok-downloads.scss
+++ b/wp-content/themes/nok-2025-v1/assets/css/components/_nok-downloads.scss
@@ -18,17 +18,6 @@
 
   @include components-base.nok-border-radius;
   text-decoration: none;
-  color: inherit;
-
-  @include components-base.transition-properties {
-    transition: background-color components-base.$animation-duration ease, box-shadow components-base.$animation-duration ease;
-  }
-
-  &:hover, &:focus-visible {
-    background: hsla(var(--nok-white-hsl) / 0.14);
-    text-decoration: none;
-    color: inherit;
-  }
 
   &:focus-visible {
     @include components-base.nok-focus-ring;
@@ -65,7 +54,6 @@
 
     // When title is a link (site-wide downloads variant)
     &:is(a) {
-      color: inherit;
       text-decoration: none;
 
       &:hover {
@@ -87,7 +75,6 @@
     align-items: center;
     justify-content: center;
     opacity: 0.5;
-    color: inherit;
     text-decoration: none;
 
     @include components-base.transition-properties {
@@ -101,7 +88,6 @@
     font-size: 0.85rem;
 
     a {
-      color: inherit;
       opacity: 0.7;
       text-decoration: underline;
       text-decoration-color: currentColor;
